Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/multicatch/Neg01.out
Neg01.java:22:19: compiler.err.except.never.thrown.in.try: Neg01.B2
1 error
